--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,2 +1,6 @@
 @import "tailwindcss";
-@plugin "daisyui";
+
+@plugin '@tailwindcss/typography';
+@plugin "daisyui" {
+    themes: light --default;
+}
